--- a/Siyudad_na_Masbate.mw
+++ b/Siyudad_na_Masbate.mw
@@ -1,10 +1,8 @@
-[[File:Ph_locator_masbate_masbate.png|right|270px]] 							
+{{Infobox location}}				
 									
 Say '''Siyudad na Masbate''' et kumapat ya klase siyudad ed luyag na [[Masbate]], [[Pilipinas]]. Unong ed 2015 Census, say papulasyon to et 95,389 totoo. <br> 	
 Walay kabaleg tan sukat to ya 188.00 sq. km. Sikato et walad  kumadwa ya distrito. Say zip code to et 5400. 			
 									
-
-
 == Saray barangay ==
 
 Say Siyudad na Masbate walay 34 ya [[barangay]].
@@ -47,6 +45,9 @@ Say Siyudad na Masbate walay 34 ya [[barangay]].
 * Ubongan Dacu
 * Usab
 </td></tr></table>
+
+== Saray reperensiya ==
+{{Reflist}}
 
 == Saray nipaway ya kawing ==
 * [http://www.nscb.gov.ph/activestats/psgc/municipality.asp?muncode=054111000&regcode=05&provcode=41 Philippine Standard Geographic Code]
