--- a/Aroroy.mw
+++ b/Aroroy.mw
@@ -1,4 +1,5 @@
-[[Image:Ph_locator_masbate_aroroy.png|right|Mapa na Masbate ya nanengneng so location na Aroroy]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Aroroy, Masbate
 | 1990 = 53060		
@@ -64,6 +65,9 @@ Say Aroroy walay 41 ya [[barangay]].
 * Tinago
 * Tinigban
 |}
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray nipaway ya kawing==
 
