--- a/Baleno.mw
+++ b/Baleno.mw
@@ -1,4 +1,5 @@
-[[Image:Ph_locator_masbate_baleno.png|right|Mapa na Masbate ya nanengneng so location na Baleno]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Baleno, Masbate
 | 1990 = 17390		
@@ -46,6 +47,9 @@ Say Baleno walay 24 ya [[barangay]].
 * Sog-Ong
 * Tinapian
 |}
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray nipaway ya kawing==
 
