--- a/Balud.mw
+++ b/Balud.mw
@@ -1,4 +1,5 @@
-[[Image:Ph_locator_masbate_balud.png|right|260px|Mapa na Masbate ya nanengneng so location na Balud]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Balud, Masbate
 | 1990 = 26121		
@@ -11,7 +12,6 @@
 | 2025 = 		
 | 2030 = 		
 |}}
-[[File:Jintotolo Island.jpg|260px|right]]
 Say '''Balud'''  sakey 4th class ya [[baley na Filipinas|baley]] ed [[luyag na Filipinas|luyag]] na [[Masbate|Masbate]], [[Filipinas]].  Onong ed [[2000]] census, walay population to ya 30,068 ya too diad 5,547 ya pamilya.
 
 ==Saray barangay==
@@ -56,6 +56,9 @@ Say Balud walay 32 ya [[barangay]].
 * Victory (Victoria)
 * Villa Alvarez
 |}
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray nipaway ya kawing==
 
