--- a/Batuan,_Masbate.mw
+++ b/Batuan,_Masbate.mw
@@ -1,4 +1,5 @@
-[[Image:Ph_locator_masbate_batuan.png|right|Mapa na Masbate ya nanengneng so location na Batuan]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Batuan, Masbate
 | 1990 = 10525		
@@ -31,6 +32,9 @@ Say Batuan walay 14 ya [[barangay]].
 * Rizal
 * Royroy
 * Sawang
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray nipaway ya kawing==
 
