--- a/Cataingan.mw
+++ b/Cataingan.mw
@@ -1,4 +1,5 @@
-[[Image:Ph_locator_masbate_cataingan.png|right|Mapa na Masbate ya nanengneng so location na Cataingan]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Cataingan, Masbate
 | 1990 = 39496		
@@ -58,6 +59,9 @@ Say Cataingan walay 36 ya [[barangay]].
 * Tuybo
 * Villa Pogado
 </td></tr></table>
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray nipaway ya kawing==
 
