--- a/Cawayan.mw
+++ b/Cawayan.mw
@@ -1,4 +1,5 @@
-[[Image:Ph_locator_masbate_cawayan.png|right|Mapa na Masbate ya nanengneng so location na Cawayan]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Cawayan, Masbate
 | 1990 = 38896		
@@ -59,6 +60,9 @@ Say Cawayan walay 37 ya [[barangay]].
 * Punta Batsan
 * Tubog
 </td></tr></table>
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray nipaway ya kawing==
 
