--- a/Claveria,_Masbate.mw
+++ b/Claveria,_Masbate.mw
@@ -1,4 +1,5 @@
-[[Image:Ph_locator_masbate_claveria.png|right|Mapa na Masbate ya nanengneng so location na Claveria]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Claveria, Masbate
 | 1990 = 31211		
@@ -43,6 +44,9 @@ Say Claveria walay 22 ya [[barangay]].
 * Taguilid
 * Imelda
 </td></tr></table>
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray nipaway ya kawing==
 
