--- a/Dimasalang.mw
+++ b/Dimasalang.mw
@@ -1,4 +1,5 @@
-[[Image:Ph_locator_masbate_dimasalang.png|right|Mapa na Masbate ya nanengneng so location na Dimasalang]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Dimasalang, Masbate
 | 1990 = 17367		
@@ -42,11 +43,13 @@ Say Dimasalang walay 20 ya [[barangay]].
 * T.R. Yangco (Yanco)
 </td></tr></table>
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray nipaway ya kawing==
 
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 
 {{Masbate}}
-
 
 [[Category:Saray baley na Masbate]]
