--- a/Esperanza,_Masbate.mw
+++ b/Esperanza,_Masbate.mw
@@ -1,4 +1,5 @@
-[[Image:Ph_locator_masbate_esperanza.png|right|Mapa na Masbate ya nanengneng so location na Esperanza]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Esperanza, Masbate
 | 1990 = 14674		
@@ -41,6 +42,9 @@ Say Esperanza walay 20 ya [[barangay]].
 * Tunga
 * Villa
 </td></tr></table>
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray nipaway ya kawing==
 
