--- a/Mandaon.mw
+++ b/Mandaon.mw
@@ -1,4 +1,4 @@
-[[Image:Ph_locator_masbate_mandaon.png|right|Mapa na Masbate ya nanengneng so location na Mandaon]]
+{{Infobox location}}
 			
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Mandaon, Masbate
@@ -49,11 +49,13 @@ Say Mandaon walay 26 ya [[barangay]].
 * Laguinbanwa
 </td></tr></table>
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray nipaway ya kawing==
 
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 
 {{Masbate}}
-
 
 [[Category:Saray baley na Masbate]]
