--- a/Milagros.mw
+++ b/Milagros.mw
@@ -1,4 +1,5 @@
-[[Image:Ph_locator_masbate_milagros.png|right|Mapa na Masbate ya nanengneng so location na Milagros]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Milagros, Masbate
 | 1990 = 33305		
@@ -48,6 +49,9 @@ Say  Milagros walay 27 ya [[barangay]].
 * Tigbao
 * Tinaclipan (Bato)
 </td></tr></table>
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray nipaway ya kawing==
 
