--- a/Mobo.mw
+++ b/Mobo.mw
@@ -1,4 +1,5 @@
-[[Image:Ph_locator_masbate_mobo.png|right|Mapa na Masbate ya nanengneng so location na Mobo]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Mobo, Masbate
 | 1990 = 24879		
@@ -51,11 +52,13 @@ Say Mobo walay 29 ya [[barangay]].
 * Umabay Interior
 </td></tr></table>
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray nipaway ya kawing==
 
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 
 {{Masbate}}
-
 
 [[Category:Saray baley na Masbate]]
