--- a/Monreal.mw
+++ b/Monreal.mw
@@ -1,4 +1,5 @@
-[[Image:Ph_locator_masbate_monreal.png|right|Mapa na Masbate ya nanengneng so location na Monreal]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Monreal, Masbate
 | 1990 = 18796		
@@ -29,11 +30,13 @@ Say Monreal walay 11 ya [[barangay]].
 * Santo Niño
 * Togoron
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray nipaway ya kawing==
 
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 
 {{Masbate}}
-
 
 [[Category:Saray baley na Masbate]]
