--- a/Palanas.mw
+++ b/Palanas.mw
@@ -1,4 +1,5 @@
-[[Image:Ph_locator_masbate_palanas.png|right|Mapa na Masbate ya nanengneng so location na Palanas]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Palanas, Masbate
 | 1990 = 21763		
@@ -45,6 +46,9 @@ Say Palanas walay 24 ya [[barangay]].
 * Santa Cruz
 * Malatawan
 </td></tr></table>
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray nipaway ya kawing==
 
