--- a/Pio_V._Corpuz.mw
+++ b/Pio_V._Corpuz.mw
@@ -1,4 +1,5 @@
-[[Image:Ph_locator_masbate_pio v. corpuz.png|right|Mapa na Masbate ya nanengneng so location na Pio V. Corpuz]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Pio V. Corpuz, Masbate
 | 1990 = 18847		
@@ -40,11 +41,13 @@ Say Pio V. Corpuz walay 18 ya [[barangay]].
 * Tubog
 </td></tr></table>
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray nipaway ya kawing==
 
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 
 {{Masbate}}
-
 
 [[Category:Saray baley na Masbate]]
