--- a/Placer,_Masbate.mw
+++ b/Placer,_Masbate.mw
@@ -1,4 +1,5 @@
-[[Image:Ph_locator_masbate_placer.png|right|Mapa na Masbate ya nanengneng so location na Placer]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Placer, Masbate
 | 1990 = 38568		
@@ -58,11 +59,13 @@ Say Placer walay 35 ya [[barangay]].
 * Villa Inocencio
 </td></tr></table>
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray nipaway ya kawing==
 
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 
 {{Masbate}}
-
 
 [[Category:Saray baley na Masbate]]
