--- a/San_Fernando,_Masbate.mw
+++ b/San_Fernando,_Masbate.mw
@@ -1,4 +1,5 @@
-[[Image:Ph_locator_masbate_san fernando.png|right|Mapa na Masbate ya nanengneng so location na San Fernando]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> San Fernando, Masbate
 | 1990 = 16904		
@@ -47,6 +48,9 @@ Say San Fernando walay 26 ya [[barangay]].
 * Talisay
 * Valparaiso
 </td></tr></table>
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray nipaway ya kawing==
 
