--- a/San_Jacinto,_Masbate.mw
+++ b/San_Jacinto,_Masbate.mw
@@ -1,4 +1,5 @@
-[[Image:Ph_locator_masbate_san jacinto.png|right|Mapa na Masbate ya nanengneng so location na San Jacinto]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> San Jacinto, Masbate
 | 1990 = 23068		
@@ -42,7 +43,9 @@ Say San Jacinto walay 21 ya [[barangay]].
 * Santa Rosa
 * Washington
 </td></tr></table>
-* created by: NEG(shadow251980)
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray nipaway ya kawing==
 
