--- a/San_Pascual,_Masbate.mw
+++ b/San_Pascual,_Masbate.mw
@@ -1,4 +1,5 @@
-[[Image:Ph_locator_masbate_san pascual.png|right|Mapa na Masbate ya nanengneng so location na San Pascual]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> San Pascual, Masbate
 | 1990 = 33396		
@@ -43,6 +44,9 @@ Say San Pascual walay 22 ya [[barangay]].
 * Cueva
 * Malaking Ilog 5
 </td></tr></table>
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray nipaway ya kawing==
 
