--- a/Uson.mw
+++ b/Uson.mw
@@ -1,4 +1,5 @@
-[[Image:Ph_locator_masbate_uson.png|right|Mapa na Masbate ya nanengneng so location na Uson]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Uson, Masbate
 | 1990 = 37265		
@@ -57,6 +58,9 @@ Say Uson walay 35 ya [[barangay]].
 * Sawang
 * Simawa
 </td></tr></table>
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray nipaway ya kawing==
 
