--- a/Oroquieta.mw
+++ b/Oroquieta.mw
@@ -1,6 +1,11 @@
-[[File:Ph_locator_misamis_occidental_oroquieta.png|right|270px]] 							
+{{Infobox location}}						
 									
 Say '''Oroquieta''' et kumapat ya klase siyudad ed luyag na [[Misamis Occidental]], [[Pilipinas]]. Unong ed 2015 Census, say papulasyon to et 70,757 totoo. <br> 	
-Walay kabaleg tan sukat to ya 237.88 sq. km. Sikato et walad  unaan ya distrito. Say zip code to et 7207. 			
+Walay kabaleg tan sukat to ya 237.88 sq. km. Sikato et walad  unaan ya distrito. Say zip code to et 7207. 	
+
+== Saray reperensiya ==
+{{Reflist}}	
+
+{{Misamis Occidental}}	
 									
 [[Category:Saray siyudad na Filipinas]]
