--- a/Ozamiz.mw
+++ b/Ozamiz.mw
@@ -1,6 +1,11 @@
-[[File:Ph locator misamis occidental ozamiz.png|right|270px]] 							
+{{Infobox location}}					
 									
 Say '''Ozamiz''' et kumatlo ya klase siyudad ed luyag na [[Misamis Occidental]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 131,527 totoo. <br> 	
-Walay kabaleg tan sukat to ya 169.95 sq. km. Sikato et walad  kumadwa ya distrito. Say zip code to et 7200. 			
+Walay kabaleg tan sukat to ya 169.95 sq. km. Sikato et walad  kumadwa ya distrito. Say zip code to et 7200.
+
+== Saray reperensiya ==
+{{Reflist}} 	
+
+{{Misamis Occidental}}		
 									
 [[Category:Saray siyudad na Filipinas]]
