--- a/Tangub.mw
+++ b/Tangub.mw
@@ -1,6 +1,11 @@
-[[File:Ph_locator_misamis_occidental_tangub.png|right|270px]] 							
+{{Infobox location}}					
 									
 Say '''Tangub''' et kumapat ya klase siyudad ed luyag na [[Misamis Occidental]], [[Pilipinas]]. Unong ed 2015 Census, say papulasyon to et 63,011 totoo. <br> 	
-Walay kabaleg tan sukat to ya 162.78 sq. km. Sikato et walad  kumadwa ya distrito. Say zip code to et 7214. 			
+Walay kabaleg tan sukat to ya 162.78 sq. km. Sikato et walad  kumadwa ya distrito. Say zip code to et 7214. 
+
+== Saray reperensiya ==
+{{Reflist}}		
+
+{{Misamis Occidental}}	
 									
 [[Category:Saray siyudad na Filipinas]]
