--- a/Aloran.mw
+++ b/Aloran.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator misamis occidental aloran.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Aloran, Misamis Occidental
 | 1990 = 20812		
@@ -52,6 +53,9 @@ Say '''Aloran''' et kumapat ya klase baley ed luyag na [[Misamis Occidental]], [
 * Zamora
 * Macubon (Sina-ad)
 * Tugaya
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
