--- a/Baliangao.mw
+++ b/Baliangao.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator misamis occidental baliangao.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Baliangao, Misamis Occidental
 | 1990 = 13562		
@@ -29,6 +30,9 @@ Say '''Baliangao''' et kumalima ya klase baley ed luyag na [[Misamis Occidental]
 * Sinian
 * Southern Poblacion
 * Tugas
+
+== Saray reperensiya ==
+{{Reflist}}
 		
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
