--- a/Bonifacio.mw
+++ b/Bonifacio.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator misamis occidental bonifacio.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Bonifacio, Misamis Occidental
 | 1990 = 24439		
@@ -42,6 +43,9 @@ Say '''Bonifacio''' et kumapat ya klase baley ed luyag na [[Misamis Occidental]]
 * Upper Usogan
 * Demetrio Fernan
 * Digson
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
