--- a/Calamba,_Misamis_Occidental.mw
+++ b/Calamba,_Misamis_Occidental.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator misamis occidental calamba.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Calamba, Misamis Occidental
 | 1990 = 15111		
@@ -33,6 +34,9 @@ Say '''Calamba''' et kumapat ya klase baley ed luyag na [[Misamis Occidental]], 
 * Southwestern Poblacion
 * Sulipat
 * Don Bernardo Neri Pob
+
+== Saray reperensiya ==
+{{Reflist}}
 	
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
