--- a/Clarin,_Misamis_Occidental.mw
+++ b/Clarin,_Misamis_Occidental.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator misamis occidental clarin.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Clarin, Misamis Occidental
 | 1990 = 23802		
@@ -43,6 +44,9 @@ Say '''Clarin''' et kumapat ya klase baley ed luyag na [[Misamis Occidental]], [
 * Segatic Diot
 * Sebasi
 * Tinacla-an
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
