--- a/Concepcion,_Misamis_Occidental.mw
+++ b/Concepcion,_Misamis_Occidental.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator misamis occidental concepcion.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Concepcion, Misamis Occidental
 | 1990 = 3877		
@@ -32,6 +33,9 @@ Say '''Concepcion''' et kumanem ya klase baley ed luyag na [[Misamis Occidental]
 * Upper Potongan
 * Upper Salimpono
 * Virayan
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
