--- a/Don_Victoriano_Chiongbian.mw
+++ b/Don_Victoriano_Chiongbian.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator misamis occidental don victoriano chiongbian.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Don Victoriano Chiongbian, Misamis Occidental
 | 1990 = 5803		
@@ -25,6 +26,9 @@ Say '''Don Victoriano Chiongbian''' et kumapat ya klase baley ed luyag na [[Misa
 * Nueva Vista (Masawan)
 * Petianan
 * Tuno
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
