--- a/Jimenez.mw
+++ b/Jimenez.mw
@@ -1,4 +1,4 @@
-[[File:Ph locator misamis occidental jimenez.png|right|270px]]
+{{Infobox location}}
 			
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Jimenez, Misamis Occidental
@@ -39,6 +39,9 @@ Say '''Jimenez''' et kumatlo ya klase baley ed luyag na [[Misamis Occidental]], 
 * Seti
 * Tabo-o 
 * Taraka (Pob.)
+
+== Saray reperensiya ==
+{{Reflist}}
 	
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
