--- a/Lopez_Jaena.mw
+++ b/Lopez_Jaena.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator misamis occidental lopez jaena.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Lopez Jaena, Misamis Occidental
 | 1990 = 19912		
@@ -42,6 +43,9 @@ Say '''Lopez Jaena''' et kumapat ya klase baley ed luyag na [[Misamis Occidental
 * Mabas
 * Mansabay Alto
 * Western Poblacion
+
+== Saray reperensiya ==
+{{Reflist}}
 	
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
