--- a/Panaon.mw
+++ b/Panaon.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator misamis occidental panaon.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Panaon, Misamis Occidental
 | 1990 = 8844		
@@ -30,6 +31,9 @@ Say '''Panaon''' et kumalima ya klase baley ed luyag na [[Misamis Occidental]], 
 * San Roque
 * Sumasap
 * Villalin
+
+== Saray reperensiya ==
+{{Reflist}}
 	
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
