--- a/Plaridel,_Misamis_Occidental.mw
+++ b/Plaridel,_Misamis_Occidental.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator misamis occidental plaridel.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Plaridel, Misamis Occidental
 | 1990 = 28824		
@@ -47,6 +48,9 @@ Say '''Plaridel''' et kumatlo ya klase baley ed luyag na [[Misamis Occidental]],
 * Tipolo
 * Unidos
 * Usocan
+
+== Saray reperensiya ==
+{{Reflist}}
 	
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
