--- a/Sapang_Dalaga.mw
+++ b/Sapang_Dalaga.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator misamis occidental sapang dalaga.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Sapang Dalaga, Misamis Occidental
 | 1990 = 17945		
@@ -42,6 +43,9 @@ Say '''Sapang Dalaga''' et kumalima ya klase baley ed luyag na [[Misamis Occiden
 * El Paraiso
 * Macabibo
 * Sapang Ama
+
+== Saray reperensiya ==
+{{Reflist}}
 	
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
