--- a/Sinacaban.mw
+++ b/Sinacaban.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator misamis occidental sinacaban.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Sinacaban, Misamis Occidental
 | 1990 = 14846		
@@ -32,6 +33,9 @@ Say '''Sinacaban''' et kumalima ya klase baley ed luyag na [[Misamis Occidental]
 * Sinonoc
 * San Lorenzo Ruiz (Sungan)
 * Tipan
+
+== Saray reperensiya ==
+{{Reflist}}
 	
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
