--- a/Tudela,_Misamis_Occidental.mw
+++ b/Tudela,_Misamis_Occidental.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator misamis occidental tudela.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Tudela, Misamis Occidental
 | 1990 = 19070		
@@ -46,6 +47,9 @@ Say '''Tudela''' et kumapat ya klase baley ed luyag na [[Misamis Occidental]], [
 * Sinuza
 * Taguima
 * Tigdok
+
+== Saray reperensiya ==
+{{Reflist}}
 	
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
