--- a/El_Salvador,_Misamis_Oriental.mw
+++ b/El_Salvador,_Misamis_Oriental.mw
@@ -1,6 +1,11 @@
-[[File:Ph_locator_misamis_oriental_el_salvador.png|right|270px]] 							
+{{Infobox location}}						
 									
 Say '''El Salvador, Misamis Oriental''' et kumanem ya klase siyudad ed luyag na [[Misamis Oriental]], [[Pilipinas]]. Unong ed 2015 Census, say papulasyon to et 50,204 totoo. <br> 	
-Walay kabaleg tan sukat to ya 106.15 sq. km. Sikato et walad  kumadwa ya distrito. Say zip code to et 9017. 			
+Walay kabaleg tan sukat to ya 106.15 sq. km. Sikato et walad  kumadwa ya distrito. Say zip code to et 9017. 	
+
+== Saray reperensiya ==
+{{Reflist}}	
+
+{{Misamis Oriental}}	
 									
 [[Category:Saray siyudad na Filipinas]]
