--- a/Gingoog.mw
+++ b/Gingoog.mw
@@ -1,6 +1,11 @@
-[[File:Ph_locator_misamis_oriental_gingoog.png|right|270px]] 							
+{{Infobox location}}					
 									
 Say '''Gingoog''' et kumadwa ya klase siyudad ed luyag na [[Misamis Oriental]], [[Pilipinas]]. Unong ed 2015 Census, say papulasyon to et 124,648 totoo. <br> 	
-Walay kabaleg tan sukat to ya 568.44 sq. km. Sikato et walad  unaan ya distrito. Say zip code to et 9014. 			
+Walay kabaleg tan sukat to ya 568.44 sq. km. Sikato et walad  unaan ya distrito. Say zip code to et 9014. 	
+
+== Saray reperensiya ==
+{{Reflist}}	
+
+{{Misamis Oriental}}	
 									
 [[Category:Saray siyudad na Filipinas]]
