--- a/Cagayan_de_Oro.mw
+++ b/Cagayan_de_Oro.mw
@@ -1,6 +1,11 @@
-[[File:Ph_locator_misamis_oriental_cagayan_de_oro.png|right|270px]] 							
+{{Infobox location}}					
 									
 Say '''Cagayan de Oro''' et unaan ya klase siyudad ed luyag na [[Misamis Oriental]], [[Pilipinas]]. Unong ed 2015 Census, say papulasyon to et 675,950 totoo. <br> 	
-Walay kabaleg tan sukat to ya 412.80 sq. km. Sikato et walad  unaan ag kumadwa ya distrito. Say zip code to et 9000. 			
+Walay kabaleg tan sukat to ya 412.80 sq. km. Sikato et walad  unaan ag kumadwa ya distrito. Say zip code to et 9000. 
+
+== Saray reperensiya ==
+{{Reflist}}	
+
+{{Misamis Oriental}}		
 									
 [[Category:Saray siyudad na Filipinas]]
