--- a/Alubijid.mw
+++ b/Alubijid.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator misamis oriental alubijid.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Alubijid, Misamis Oriental
 | 1990 = 19531		
@@ -31,12 +32,14 @@ Say '''Alubijid''' et kumapat ya klase baley ed luyag na [[Misamis Oriental]], [
 * Tugasnon
 * Tula
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
 {{Misamis Oriental}}
- 
-														
+ 													
 [[Category:Saray baley na Misamis Oriental]]
