--- a/Balingasag.mw
+++ b/Balingasag.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator misamis oriental balingasag.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Balingasag, Misamis Oriental
 | 1990 = 41506		
@@ -44,6 +45,9 @@ Say '''Balingasag''' et kumadwa ya klase baley ed luyag na [[Misamis Oriental]],
 * San Juan
 * Talusan
 * Waterfall
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
