--- a/Balingoan.mw
+++ b/Balingoan.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator misamis oriental balingoan.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Balingoan, Misamis Oriental
 | 1990 = 6689		
@@ -23,6 +24,9 @@ Say '''Balingoan''' et kumalima ya klase baley ed luyag na [[Misamis Oriental]],
 * Mantangale
 * Mapua
 * San Alonzo
+
+== Saray reperensiya ==
+{{Reflist}}
 	
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
