--- a/Binuangan.mw
+++ b/Binuangan.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator misamis oriental binuangan.png|right|270px]]	
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Binuangan, Misamis Oriental
 | 1990 = 5090		
@@ -22,6 +23,9 @@ Say '''Binuangan''' et kumanem ya klase baley ed luyag na [[Misamis Oriental]], 
 * Nabataan
 * Poblacion
 * Valdeconcha
+
+== Saray reperensiya ==
+{{Reflist}}
 	
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
