--- a/Claveria,_Misamis_Oriental.mw
+++ b/Claveria,_Misamis_Oriental.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator misamis oriental claveria.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Claveria, Misamis Oriental
 | 1990 = 31130		
@@ -22,6 +23,9 @@ Say '''Claveria''' et unaan ya klase baley ed luyag na [[Misamis Oriental]], [[P
 * Nabataan
 * Poblacion
 * Valdeconcha
+
+== Saray reperensiya ==
+{{Reflist}}
 	
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
