--- a/Gitagum.mw
+++ b/Gitagum.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator misamis oriental gitagum.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Gitagum, Misamis Oriental
 | 1990 = 10994		
@@ -25,6 +26,9 @@ Say '''Gitagum''' et kumalima ya klase baley ed luyag na [[Misamis Oriental]], [
 * Quezon
 * Tala-o
 * Ulab
+
+== Saray reperensiya ==
+{{Reflist}}
 	
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
