--- a/Initao.mw
+++ b/Initao.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator misamis oriental initao.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Initao, Misamis Oriental
 | 1990 = 23113		
@@ -30,6 +31,9 @@ Say '''Initao''' et kumatlo ya klase baley ed luyag na [[Misamis Oriental]], [[P
 * Sinalac
 * Tawantawan
 * Tubigan
+
+== Saray reperensiya ==
+{{Reflist}}
 		
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
