--- a/Jasaan.mw
+++ b/Jasaan.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator misamis oriental jasaan.png|right|270px]]	
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Jasaan, Misamis Oriental
 | 1990 = 29146		
@@ -29,6 +30,9 @@ Say '''Jasaan''' et kumadwa ya klase baley ed luyag na [[Misamis Oriental]], [[P
 * Sinalac
 * Tawantawan
 * Tubigan
+
+== Saray reperensiya ==
+{{Reflist}}
 		
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
