--- a/Kinoguitan.mw
+++ b/Kinoguitan.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator misamis oriental kinoguitan.png|right|270px]]	
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Kinoguitan, Misamis Oriental
 | 1990 = 8795		
@@ -29,6 +30,9 @@ Say '''Kinoguitan''' et kumalima ya klase baley ed luyag na [[Misamis Oriental]]
 * Salubsob
 * Suarez
 * Sumalag
+
+== Saray reperensiya ==
+{{Reflist}}
 		
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
