--- a/Lagonglong.mw
+++ b/Lagonglong.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator misamis oriental lagonglong.png|right|270px]]	
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Lagonglong, Misamis Oriental
 | 1990 = 12705		
@@ -24,6 +25,9 @@ Say '''Lagonglong''' et kumalima ya klase baley ed luyag na [[Misamis Oriental]]
 * Poblacion
 * Tabok
 * Umagos
+
+== Saray reperensiya ==
+{{Reflist}}
 		
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
