--- a/Laguindingan.mw
+++ b/Laguindingan.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator misamis oriental laguindingan.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Laguindingan, Misamis Oriental
 | 1990 = 15503		
@@ -25,6 +26,9 @@ Say '''Laguindingan''' et kumapat ya klase baley ed luyag na [[Misamis Oriental]
 * Sambulawan 
 * Sinai
 * Tubajon
+
+== Saray reperensiya ==
+{{Reflist}}
 		
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
