--- a/Libertad,_Misamis_Oriental.mw
+++ b/Libertad,_Misamis_Oriental.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator misamis oriental libertad.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Libertad, Misamis Oriental
 | 1990 = 8487		
@@ -23,6 +24,9 @@ Say '''Libertad''' et kumalima ya klase baley ed luyag na [[Misamis Oriental]], 
 * Sto. Niño
 * Tangkub 
 * Taytayan
+
+== Saray reperensiya ==
+{{Reflist}}
 	
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
