suprresed image from Wikidata

--- a/Libertad,_Misamis_Oriental.mw
+++ b/Libertad,_Misamis_Oriental.mw
@@ -1,4 +1,6 @@
-{{Infobox location}}
+{{Infobox location
+|image_skyline=
+}}
 
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Libertad, Misamis Oriental
