--- a/Lugait.mw
+++ b/Lugait.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator misamis oriental lugait.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Lugait, Misamis Oriental
 | 1990 = 11973		
@@ -22,6 +23,9 @@ Say '''Lugait''' et kumadwa ya klase baley ed luyag na [[Misamis Oriental]], [[P
 * Lower Talacogon
 * Poblacion
 * Upper Talacogon
+
+== Saray reperensiya ==
+{{Reflist}}
 	
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
