--- a/Magsaysay,_Misamis_Oriental.mw
+++ b/Magsaysay,_Misamis_Oriental.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator misamis oriental magsaysay.png|right|270px]]	
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Magsaysay, Misamis Oriental
 | 1990 = 22099		
@@ -39,6 +40,9 @@ Say '''Magsaysay''' et kumapat ya klase baley ed luyag na [[Misamis Oriental]], 
 * Katipunan
 * Tama
 * Tinaan
+
+== Saray reperensiya ==
+{{Reflist}}
 	
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
