--- a/Manticao.mw
+++ b/Manticao.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator misamis oriental manticao.png|right|270px]]	
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Manticao, Misamis Oriental
 | 1990 = 21443		
@@ -13,7 +14,6 @@
 |}}
 Say '''Manticao''' et kumapat ya klase baley ed luyag na [[Misamis Oriental]], [[Pilipinas]]. Unong ed 2015 Census, say papulasyon to et 28,422 totoo. Walay kabaleg tan sukat to ya 123.01 sq. km. Sikato et walad kumapat ya distrito. Say zip code to et 9024.	
 	
-
 ==Saray barangay==
 * Argayoso 
 * Balintad 
@@ -28,6 +28,9 @@ Say '''Manticao''' et kumapat ya klase baley ed luyag na [[Misamis Oriental]], [
 * Punta Silum 
 * Tuod 
 * Upper Malubog
+
+== Saray reperensiya ==
+{{Reflist}}
 	
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
