--- a/Medina.mw
+++ b/Medina.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator misamis oriental medina.png|right|270px]]	
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Medina, Misamis Oriental
 | 1990 = 21796		
@@ -33,6 +34,9 @@ Say '''Medina''' et kumapat ya klase baley ed luyag na [[Misamis Oriental]], [[P
 * South Poblacion
 * Tambagan
 * Tup-on
+
+== Saray reperensiya ==
+{{Reflist}}
 	
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
