--- a/Naawan.mw
+++ b/Naawan.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator misamis oriental naawan.png|right|270px]]	
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Naawan, Misamis Oriental
 | 1990 = 13345		
@@ -25,6 +26,9 @@ Say '''Naawan''' et kumapat ya klase baley ed luyag na [[Misamis Oriental]], [[P
 * Poblacion
 * Tagbalogo
 * Tuboran
+
+== Saray reperensiya ==
+{{Reflist}}
 	
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
