--- a/Opol.mw
+++ b/Opol.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator misamis oriental opol.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Opol, Misamis Oriental
 | 1990 = 20473		
@@ -28,6 +29,9 @@ Say '''Opol''' et kumadwa ya klase baley ed luyag na [[Misamis Oriental]], [[Pil
 *  Poblacion
 *  Taboc
 *  Tingalan
+
+== Saray reperensiya ==
+{{Reflist}}
 	
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
