--- a/Salay.mw
+++ b/Salay.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator misamis oriental salay.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Salay, Misamis Oriental
 | 1990 = 18101		
@@ -32,6 +33,9 @@ Say '''Salay''' et kumapat ya klase baley ed luyag na [[Misamis Oriental]], [[Pi
 * Tinagaan
 * Yungod
 * Casulog
+
+== Saray reperensiya ==
+{{Reflist}}
 	
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
