--- a/Sugbongcogon.mw
+++ b/Sugbongcogon.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator misamis oriental sugbongcogon.png|right|270px]]	
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Sugbongcogon, Misamis Oriental
 | 1990 = 6175		
@@ -25,6 +26,8 @@ Say '''Sugbongcogon''' et kumalima ya klase baley ed luyag na [[Misamis Oriental
 * Santa Cruz
 * Silad
 
+== Saray reperensiya ==
+{{Reflist}}
 	
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
