--- a/Tagoloan,_Misamis_Oriental.mw
+++ b/Tagoloan,_Misamis_Oriental.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator misamis oriental tagoloan.png|right|270px]]													
+{{Infobox location}}
+											
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Tagoloan, Misamis Oriental
 | 1990 = 33919		
@@ -24,6 +25,9 @@ Say '''Tagoloan''' et unaan ya klase baley ed luyag na [[Misamis Oriental]], [[P
 * Santa Ana
 * Santa Cruz
 * Sugbongcogon
+
+== Saray reperensiya ==
+{{Reflist}}
 	
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
