--- a/Talisayan.mw
+++ b/Talisayan.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator misamis oriental talisayan.png|right|270px]]	
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Talisayan, Misamis Oriental
 | 1990 = 17015		
@@ -32,6 +33,9 @@ Say '''Talisayan''' et kumapat ya klase baley ed luyag na [[Misamis Oriental]], 
 * Sibantang
 * Sindangan
 * Tagbocboc
+
+== Saray reperensiya ==
+{{Reflist}}
 	
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
