--- a/Villanueva.mw
+++ b/Villanueva.mw
@@ -1,4 +1,4 @@
-[[File:Ph locator misamis oriental villanueva.png|right|270px]]
+{{Infobox location}}
 			
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Villanueva, Misamis Oriental
@@ -26,6 +26,9 @@ Say '''Villanueva''' et kumadwa ya klase baley ed luyag na [[Misamis Oriental]],
 * Tambobong
 * Imelda
 * Looc
+
+== Saray reperensiya ==
+{{Reflist}}
 	
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
