--- a/Barlig.mw
+++ b/Barlig.mw
@@ -1,4 +1,5 @@
-[[Image:Ph_locator_mountain province_barlig.png|right|Mapa na Luyag na Palandey ya nanengneng so location na Barlig]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Barlig, Mountain Province
 | 1990 = 6273		
@@ -28,6 +29,9 @@ Say Barlig walay 11 ya [[barangay]].
 * Ogoog
 * Gawana (Pob.)
 * Lias Silangan
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray nipaway ya kawing==
 
