--- a/Bauko.mw
+++ b/Bauko.mw
@@ -1,4 +1,5 @@
-[[Image:Ph_locator_mountain province_bauko.png|right|Mapa na Luyag na Palandey ya nanengneng so location na Bauko]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Bauko, Mountain Province
 | 1990 = 21126		
@@ -44,6 +45,9 @@ Say Bauko walay 22 ya [[barangay]].
 * Sinto
 * Tapapan
 |}
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray nipaway ya kawing==
 
