--- a/Besao.mw
+++ b/Besao.mw
@@ -1,4 +1,5 @@
-[[Image:Ph_locator_mountain province_besao.png|right|Mapa na Luyag na Palandey ya nanengneng so location na Besao]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Besao, Mountain Province
 | 1990 = 8473		
@@ -31,6 +32,9 @@ Say Besao walay 14 ya [[barangay]].
 * Suquib
 * Tamboan
 * Kin-iway (Pob.)
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray nipaway ya kawing==
 
