--- a/Bontoc,_Mountain_Province.mw
+++ b/Bontoc,_Mountain_Province.mw
@@ -1,4 +1,5 @@
-[[File:Ph_locator_mountain province_bontoc.png|right|Mapa na Luyag na Palandey ya nanengneng so location na Bontoc]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Bontoc, Mountain Province
 | 1990 = 17716		
@@ -14,7 +15,6 @@
 Say '''Bontoc''' ([[salitan Tagalog|Tagalog]]: ''Bontok''), sakey 5th class ya [[baley na Filipinas|baley]] ed [[luyag na Filipinas|luyag]] na [[Luyag na Palandey|Mountain Province]] ([[Luyag na Palandey]]), [[Filipinas]]. Sakey say kapital na [[Luyag na Palandey]]. Onong ed [[2000]] census, walay population to ya 22,308 ya too diad 5,035 ya pamilya.
 
 == Saray barangay ==
-[[Image:Bontoc0610-b.jpg|right|thumb|250px|Baley na Bontoc]]
 Say Bontoc walay 16 ya [[barangay]].
 
 {| border="0"
@@ -38,6 +38,9 @@ Say Bontoc walay 16 ya [[barangay]].
 * Poblacion (Bontoc)
 * Calutit
 |}
+
+== Saray reperensiya ==
+{{Reflist}}
 
 == Saray nipaway ya kawing ==
 
