--- a/Natonin.mw
+++ b/Natonin.mw
@@ -1,4 +1,5 @@
-[[Image:Ph_locator_mountain province_natonin.png|right|Mapa na Luyag na Palandey ya nanengneng so location na Natonin]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Natonin, Mountain Province
 | 1990 = 9813		
@@ -29,6 +30,8 @@ Say Natonin walay 11 ya [[barangay]].
 * Tonglayan
 * Pudo
 
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray nipaway ya kawing==
 
