--- a/Paracelis.mw
+++ b/Paracelis.mw
@@ -1,4 +1,5 @@
-[[Image:Ph_locator_mountain province_paracelis.png|right|Mapa na Luyag na Palandey ya nanengneng so location na Paracelis]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Paracelis, Mountain Province
 | 1990 = 13027		
@@ -26,6 +27,9 @@ Say Paracelis walay 9 ya [[barangay]].
 * Buringal
 * Palitod
 * Poblacion
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray nipaway ya kawing==
 
