--- a/Sabangan.mw
+++ b/Sabangan.mw
@@ -1,4 +1,5 @@
-[[Image:Ph_locator_mountain province_sabangan.png|right|Mapa na Luyag na Palandey ya nanengneng so location na Sabangan]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Sabangan, Mountain Province
 | 1990 = 8083		
@@ -32,6 +33,9 @@ Say Sabangan walay 15 ya [[barangay]].
 * Poblacion
 * Supang
 * Tambingan
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray nipaway ya kawing==
 
