--- a/Sadanga.mw
+++ b/Sadanga.mw
@@ -1,4 +1,5 @@
-[[Image:Ph_locator_mountain province_sadanga.png|right|Mapa na Luyag na Palandey ya nanengneng so location na Sadanga]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Sadanga, Mountain Province
 | 1990 = 7302		
@@ -25,6 +26,9 @@ Say Sadanga walay 8 ya [[barangay]].
 * Sacasacan
 * Saclit
 * Demang
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray nipaway ya kawing==
 
