--- a/Sagada.mw
+++ b/Sagada.mw
@@ -1,4 +1,5 @@
-[[Image:Ph locator mountain province sagada.png|right|Mapa na Luyag na Palandey ya nanengneng so location na Sagada]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Sagada, Mountain Province
 | 1990 = 10353		
@@ -40,6 +41,9 @@ Say Sagada walay 19 ya [[barangay]].
 * Tanulong
 * Tetepan Norte
 </td></tr></table>
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray nipaway ya kawing==
 *[http://www.aenet.org/ifugao/sagada.htm AENET Sagada]
