--- a/Tadian.mw
+++ b/Tadian.mw
@@ -1,4 +1,5 @@
-[[File:Ph_locator_mountain province_tadian.png|right|Mapa na Luyag na Palandey ya nanengneng so location na Tadian]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Tadian, Mountain Province
 | 1990 = 14369		
@@ -40,6 +41,9 @@ Say Tadian walay 19 ya [[barangay]].
 * Tue
 * Kayan West
 </td></tr></table>
+
+== Saray reperensiya ==
+{{Reflist}}
 
 == Saray nipaway ya kawing ==
 
