--- a/Bago.mw
+++ b/Bago.mw
@@ -1,6 +1,11 @@
-[[File:Ph_locator_negros_occidental_bago.png|right|270px]] 							
+{{Infobox location}}					
 									
 Say '''Bago''' et kumadwa ya klase siyudad ed luyag na [[Negros Occidental]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 163,045 totoo. <br> 	
-Walay kabaleg tan sukat to ya 401.20 sq. km. Sikato et walad  kumapat ya distrito. Say zip code to et 6101. 			
+Walay kabaleg tan sukat to ya 401.20 sq. km. Sikato et walad  kumapat ya distrito. Say zip code to et 6101. 
+
+== Saray reperensiya ==
+{{Reflist}}	
+
+{{Negros Occidental}}	
 									
 [[Category:Saray siyudad na Filipinas]]
