--- a/Cadiz.mw
+++ b/Cadiz.mw
@@ -1,6 +1,11 @@
-[[File:Ph_locator_negros_occidental_cadiz.png|right|270px]] 							
+{{Infobox location}}							
 									
 Say '''Cadiz, Negros Occidental''' et kumadwa ya klase siyudad ed luyag na [[Negros Occidental]], [[Pilipinas]]. Unong ed 2015 Census, say papulasyon to et 154,723  totoo. <br> 	
-Walay kabaleg tan sukat to ya 524.57 sq. km. Sikato et walad  kumadwa ya distrito. Say zip code to et 6121. 			
+Walay kabaleg tan sukat to ya 524.57 sq. km. Sikato et walad  kumadwa ya distrito. Say zip code to et 6121. 
+
+== Saray reperensiya ==
+{{Reflist}}	
+
+{{Negros Occidental}}		
 									
 [[Category:Saray siyudad na Filipinas]]
