--- a/Escalante.mw
+++ b/Escalante.mw
@@ -1,6 +1,11 @@
-[[File:Ph_locator_negros_occidental_escalante.png|right|270px]] 							
+{{Infobox location}}						
 									
 Say '''Escalante''' et kumapat ya klase siyudad ed luyag na [[Negros Occidental]], [[Pilipinas]]. Unong ed 2015 Census, say papulasyon to et 94,070 totoo. <br> 	
-Walay kabaleg tan sukat to ya 192.76 sq. km. Sikato et walad  unaan ya distrito. Say zip code to et 6124. 			
+Walay kabaleg tan sukat to ya 192.76 sq. km. Sikato et walad  unaan ya distrito. Say zip code to et 6124. 	
+
+== Saray reperensiya ==
+{{Reflist}}	
+
+{{Negros Occidental}}	
 									
 [[Category:Saray siyudad na Filipinas]]
