--- a/Himamaylan.mw
+++ b/Himamaylan.mw
@@ -1,6 +1,11 @@
-[[File:Ph_locator_negros_occidental_himamaylan.png|right|270px]] 							
+{{Infobox location}}					
 									
 Say '''Himamaylan''' et kumatlo ya klase siyudad ed luyag na [[Negros Occidental]], [[Pilipinas]]. Unong ed 2015 Census, say papulasyon to et 106,880 totoo. <br> 	
-Walay kabaleg tan sukat to ya 367.04 sq. km. Sikato et walad  kumalima ya distrito. Say zip code to et 6108. 			
+Walay kabaleg tan sukat to ya 367.04 sq. km. Sikato et walad  kumalima ya distrito. Say zip code to et 6108. 	
+
+== Saray reperensiya ==
+{{Reflist}}	
+
+{{Negros Occidental}}	
 									
 [[Category:Saray siyudad na Filipinas]]
