--- a/Kabankalan.mw
+++ b/Kabankalan.mw
@@ -1,6 +1,11 @@
-[[File:Ph_locator_negros_occidental_kabankalan.png|right|270px]] 							
+{{Infobox location}}					
 									
 Say '''Kabankalan''' et unaan ya klase siyudad ed luyag na [[Negros Occidental]], [[Pilipinas]]. Unong ed 2015 Census, say papulasyon to et 181,977 totoo. <br> 	
-Walay kabaleg tan sukat to ya 697.35 sq. km. Sikato et walad  kumanem ya distrito. Say zip code to et 6111. 			
+Walay kabaleg tan sukat to ya 697.35 sq. km. Sikato et walad  kumanem ya distrito. Say zip code to et 6111. 	
+
+== Saray reperensiya ==
+{{Reflist}}	
+
+{{Negros Occidental}}	
 									
 [[Category:Saray siyudad na Filipinas]]
