--- a/La_Carlota.mw
+++ b/La_Carlota.mw
@@ -1,6 +1,11 @@
-[[File:Ph_locator_negros_occidental_la_carlota.png|right|270px]] 							
+{{Infobox location}}					
 									
 Say '''La Carlota''' et kumapat ya klase siyudad ed luyag na [[Negros Occidental]], [[Pilipinas]]. Unong ed 2015 Census, say papulasyon to et 64,469 totoo. <br> 	
-Walay kabaleg tan sukat to ya 137.29 sq. km. Sikato et walad  kumapat ya distrito. Say zip code to et 6130. 			
+Walay kabaleg tan sukat to ya 137.29 sq. km. Sikato et walad  kumapat ya distrito. Say zip code to et 6130.
+
+== Saray reperensiya ==
+{{Reflist}} 	
+
+{{Negros Occidental}}		
 									
 [[Category:Saray siyudad na Filipinas]]
