--- a/Sagay.mw
+++ b/Sagay.mw
@@ -1,6 +1,11 @@
-[[File:Ph_locator_negros_occidental_sagay.png|right|270px]] 							
+{{Infobox location}}					
 									
 Say '''Sagay''' et kumatlo ya klase siyudad ed luyag na [[Negros Occidental]], [[Pilipinas]]. Unong ed 2015 Census, say papulasyon to et 146,264 totoo. <br> 	
-Walay kabaleg tan sukat to ya 330.34 sq. km. Sikato et walad  kumadwa ya distrito. Say zip code to et 6122. 			
+Walay kabaleg tan sukat to ya 330.34 sq. km. Sikato et walad  kumadwa ya distrito. Say zip code to et 6122. 
+
+== Saray reperensiya ==
+{{Reflist}}	
+
+{{Negros Occidental}}		
 									
 [[Category:Saray siyudad na Filipinas]]
