--- a/Silay.mw
+++ b/Silay.mw
@@ -1,6 +1,11 @@
-[[File:Ph_locator_negros_occidental_silay.png|right|270px]] 							
+{{Infobox location}}					
 									
 Say '''Silay''' et kumatlo ya klase siyudad ed luyag na [[Negros Occidental]], [[Pilipinas]]. Unong ed 2015 Census, say papulasyon to et 126,930 totoo. <br> 	
-Walay kabaleg tan sukat to ya 214.80 sq. km. Sikato et walad  kumatlo ya distrito. Say zip code to et 6116. 			
+Walay kabaleg tan sukat to ya 214.80 sq. km. Sikato et walad  kumatlo ya distrito. Say zip code to et 6116. 
+
+== Saray reperensiya ==
+{{Reflist}}	
+
+{{Negros Occidental}}		
 									
 [[Category:Saray siyudad na Filipinas]]
