--- a/Sipalay.mw
+++ b/Sipalay.mw
@@ -1,6 +1,11 @@
-[[File:Ph_locator_negros_occidental_sipalay.png|right|270px]] 							
+{{Infobox location}}					
 									
 Say '''Sipalay''' et kumapat ya klase siyudad ed luyag na [[Negros Occidental]], [[Pilipinas]]. Unong ed 2015 Census, say papulasyon to et 70,070 totoo. <br> 	
-Walay kabaleg tan sukat to ya 379.78 sq. km. Sikato et walad  kumanem ya distrito. Say zip code to et 6113. 			
+Walay kabaleg tan sukat to ya 379.78 sq. km. Sikato et walad  kumanem ya distrito. Say zip code to et 6113. 	
+
+== Saray reperensiya ==
+{{Reflist}}	
+
+{{Negros Occidental}}	
 									
 [[Category:Saray siyudad na Filipinas]]
