--- a/Talisay,_Negros_Occidental.mw
+++ b/Talisay,_Negros_Occidental.mw
@@ -1,6 +1,11 @@
-[[File:Ph_locator_negros_occidental_talisay.png|right|270px]] 							
+{{Infobox location}}					
 									
 Say '''Talisay, Negros Occidental''' et kumapat ya klase siyudad ed luyag na [[Negros Occidental]], [[Pilipinas]]. Unong ed 2015 Census, say papulasyon to et 102,214 totoo. <br> 	
-Walay kabaleg tan sukat to ya 201.18 sq. km. Sikato et walad  kumatlo ya distrito. Say zip code to et 6115. 			
+Walay kabaleg tan sukat to ya 201.18 sq. km. Sikato et walad  kumatlo ya distrito. Say zip code to et 6115. 
+
+== Saray reperensiya ==
+{{Reflist}}	
+
+{{Negros Occidental}}		
 									
 [[Category:Saray siyudad na Filipinas]]
