--- a/Victorias.mw
+++ b/Victorias.mw
@@ -1,6 +1,11 @@
-[[File:Ph_locator_negros_occidental_victorias.png|right|270px]] 							
+{{Infobox location}}					
 									
 Say '''Victorias''' et kumapat ya klase siyudad ed luyag na [[Negros Occidental]], [[Pilipinas]]. Unong ed 2015 Census, say papulasyon to et 87,933 totoo. <br> 	
-Walay kabaleg tan sukat to ya 133.92 sq. km. Sikato et walad  kumatlo ya distrito. Say zip code to et 6119. 			
+Walay kabaleg tan sukat to ya 133.92 sq. km. Sikato et walad  kumatlo ya distrito. Say zip code to et 6119. 
+
+== Saray reperensiya ==
+{{Reflist}}	
+
+{{Negros Occidental}}		
 									
 [[Category:Saray siyudad na Filipinas]]
