--- a/Bacolod.mw
+++ b/Bacolod.mw
@@ -1,6 +1,11 @@
-[[File:Ph_locator_negros_occidental_bacolod.png|right|270px]] 							
+{{Infobox location}}					
 									
 Say '''Bacolod''' et unaan ya klase siyudad ed luyag na [[Negros Occidental]], [[Pilipinas]]. Unong ed 2015 Census, say papulasyon to et 561,875 totoo. <br> 	
-Walay kabaleg tan sukat to ya 162.67 sq. km. Sikato et walad  alenleneg ya distrito. Say zip code to et 6100. 			
+Walay kabaleg tan sukat to ya 162.67 sq. km. Sikato et walad  alenleneg ya distrito. Say zip code to et 6100. 	
+
+== Saray reperensiya ==
+{{Reflist}}	
+
+{{Negros Occidental}}	
 									
 [[Category:Saray siyudad na Filipinas]]
