--- a/Binalbagan.mw
+++ b/Binalbagan.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator negros occidental binalbagan.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Binalbagan, Negros Occidental
 | 1990 = 52073		
@@ -12,7 +13,6 @@
 | 2030 = 		
 |}}
 Say '''Binalbagan''' et unaan ya klase baley ed luyag na [[Negros Occidental]], [[Pilipinas]]. Unong ed 2015 Census, say papulasyon to et 67,270 totoo. Walay kabaleg tan sukat to ya 189.96 sq. km. Sikato et walad unaan ya distrito. Say zip code to et 6107.
-
 
 ==Saray barangay==
 * Amontay
@@ -32,12 +32,14 @@ Say '''Binalbagan''' et unaan ya klase baley ed luyag na [[Negros Occidental]], 
 * Santo Rosario (Pob.)
 * Santol
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
 {{Negros Occidental}}
- 	
-															
+ 															
 [[Category:Saray baley na Negros Occidental]]
