--- a/Calatrava,_Negros_Occidental.mw
+++ b/Calatrava,_Negros_Occidental.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator negros occidental calatrava.png|right|270px]]	
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Calatrava, Negros Occidental
 | 1990 = 60228		
@@ -55,6 +56,9 @@ Say '''Calatrava''' et unaan ya klase baley ed luyag na [[Negros Occidental]], [
 * Tigbao
 * Tigbon
 * Winaswasan
+
+== Saray reperensiya ==
+{{Reflist}}
 	
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
