--- a/Candoni.mw
+++ b/Candoni.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator negros occidental candoni.png|right|270px]]	
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Candoni, Negros Occidental
 | 1990 = 16638		
@@ -23,6 +24,9 @@ Say '''Candoni''' et kumapat ya klase baley ed luyag na [[Negros Occidental]], [
 * Payauan
 * Poblacion East
 * Poblacion West
+
+== Saray reperensiya ==
+{{Reflist}}
 	
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
