--- a/Cauayan,_Negros_Occidental.mw
+++ b/Cauayan,_Negros_Occidental.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator negros occidental cauayan.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Cauayan, Negros Occidental
 | 1990 = 81063		
@@ -39,6 +40,9 @@ Say '''Cauayan''' et unaan ya klase baley ed luyag na [[Negros Occidental]], [[P
 * Tomina
 * Tuyom
 * Yao-yao
+
+== Saray reperensiya ==
+{{Reflist}}
 	
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
