--- a/Enrique_B._Magalona.mw
+++ b/Enrique_B._Magalona.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator negros occidental enrique b. magalona.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Enrique B. Magalona, Negros Occidental
 | 1990 = 48866		
@@ -37,6 +38,9 @@ Say '''Enrique B. Magalona''' et kumadwa ya klase baley ed luyag na [[Negros Occ
 * Tanza
 * Tuburan
 * Tomongtong
+
+== Saray reperensiya ==
+{{Reflist}}
 	
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
