--- a/Hinigaran.mw
+++ b/Hinigaran.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator negros occidental hinigaran.png|right|270px]]	
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Hinigaran, Negros Occidental
 | 1990 = 68739		
@@ -38,6 +39,9 @@ Say '''Hinigaran''' et unaan ya klase baley ed luyag na [[Negros Occidental]], [
 * Tagda  
 * Tuguis 
 * Baga-as
+
+== Saray reperensiya ==
+{{Reflist}}
 	
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
