--- a/Hinoba-an.mw
+++ b/Hinoba-an.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator negros occidental hinoba-an.png|right|270px]]	
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Hinoba-an, Negros Occidental
 | 1990 = 40813		
@@ -27,6 +28,9 @@ Say '''Hinoba-an''' et unaan ya klase baley ed luyag na [[Negros Occidental]], [
 *San Rafael 
 *Sangke 
 *Talacagay
+
+== Saray reperensiya ==
+{{Reflist}}
 		
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
