--- a/Ilog.mw
+++ b/Ilog.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator negros occidental ilog.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Ilog, Negros Occidental
 | 1990 = 46599		
@@ -29,6 +30,9 @@ Say '''Ilog''' et kumadwa ya klase baley ed luyag na [[Negros Occidental]], [[Pi
 * Baranggay II (Pob.)
 * Tabu
 * Vista Alegre
+
+== Saray reperensiya ==
+{{Reflist}}
 	
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
