--- a/Isabela,_Negros_Occidental.mw
+++ b/Isabela,_Negros_Occidental.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator negros occidental isabela.png|right|270px]]	
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Isabela, Negros Occidental
 | 1990 = 47010		
@@ -45,6 +46,9 @@ Say '''Isabela''' et kumadwa ya klase baley ed luyag na [[Negros Occidental]], [
 * Sebucawan
 * Sikatuna
 * Tinongan
+
+== Saray reperensiya ==
+{{Reflist}}
 	
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
