--- a/La_Castellana.mw
+++ b/La_Castellana.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator negros occidental la castellana.png|right|270px]]	
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> La Castellana, Negros Occidental
 | 1990 = 54368		
@@ -27,6 +28,9 @@ Say '''La Castellana''' et unaan ya klase baley ed luyag na [[Negros Occidental]
 * Robles (Pob.)
 * Sag-Ang
 * Talaptap
+
+== Saray reperensiya ==
+{{Reflist}}
 	
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
