--- a/Manapla.mw
+++ b/Manapla.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator negros occidental manapla.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Manapla, Negros Occidental
 | 1990 = 40095		
@@ -26,6 +27,9 @@ Say '''Manapla''' et kumadwa ya klase baley ed luyag na [[Negros Occidental]], [
 * San Pablo
 * Santa Teresa
 * Tortosa
+
+== Saray reperensiya ==
+{{Reflist}}
 	
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
