--- a/Moises_Padilla.mw
+++ b/Moises_Padilla.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator negros occidental moises padilla.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Moises Padilla, Negros Occidental
 | 1990 = 30742		
@@ -29,6 +30,9 @@ Say '''Moises Padilla''' et kumatlo ya klase baley ed luyag na [[Negros Occident
 * Montilla
 * Odiong
 * Quintin Remo
+
+== Saray reperensiya ==
+{{Reflist}}
 	
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
