--- a/Murcia.mw
+++ b/Murcia.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator negros occidental murcia.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Murcia, Negros Occidental
 | 1990 = 50996		
@@ -37,6 +38,9 @@ Say '''Murcia''' et unaan ya klase baley ed luyag na [[Negros Occidental]], [[Pi
 * Santa Rosa
 * Salvacion
 * Talotog
+
+== Saray reperensiya ==
+{{Reflist}}
 	
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
