--- a/Pontevedra,_Negros_Occidental.mw
+++ b/Pontevedra,_Negros_Occidental.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator negros occidental pontevedra.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Pontevedra, Negros Occidental
 | 1990 = 40094		
@@ -34,6 +35,9 @@ Say '''Pontevedra''' et kumatlo ya klase baley ed luyag na [[Negros Occidental]]
 * San Isidro
 * San Juan
 * Zamora
+
+== Saray reperensiya ==
+{{Reflist}}
 	
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
