--- a/Pulupandan.mw
+++ b/Pulupandan.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator negros occidental pulupandan.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Pulupandan, Negros Occidental
 | 1990 = 22983		
@@ -34,6 +35,9 @@ Say '''Pulupandan''' et kumatlo ya klase baley ed luyag na [[Negros Occidental]]
 * Tapong
 * Ubay
 * Utod
+
+== Saray reperensiya ==
+{{Reflist}}
 	
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
