--- a/Salvador_Benedicto.mw
+++ b/Salvador_Benedicto.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator negros occidental salvador benedicto.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Salvador Benedicto, Negros Occidental
 | 1990 = 13538		
@@ -23,6 +24,8 @@ Say '''Salvador Benedicto''' et kumapat ya klase baley ed luyag na [[Negros Occi
 * Pandanon
 * Pinowayan (Prosperidad)
 
+== Saray reperensiya ==
+{{Reflist}}
 	
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
