--- a/San_Enrique,_Negros_Occidental.mw
+++ b/San_Enrique,_Negros_Occidental.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator negros occidental san enrique.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> San Enrique, Negros Occidental
 | 1990 = 19255		
@@ -24,6 +25,9 @@ Say '''San Enrique''' et kumapat ya klase baley ed luyag na [[Negros Occidental]
 * Tabao Baybay
 * Tabao Rizal
 * Tibsoc
+
+== Saray reperensiya ==
+{{Reflist}}
 	
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
