--- a/Toboso.mw
+++ b/Toboso.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator negros occidental toboso.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Toboso, Negros Occidental
 | 1990 = 34621		
@@ -23,6 +24,9 @@ Say '''Toboso''' et kumatlo ya klase baley ed luyag na [[Negros Occidental]], [[
 * San Isidro
 * San Jose
 * Tabun-ac
+
+== Saray reperensiya ==
+{{Reflist}}
 	
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
