--- a/Valladolid.mw
+++ b/Valladolid.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator negros occidental valladolid.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Valladolid, Negros Occidental
 | 1990 = 29742		
@@ -30,6 +31,9 @@ Say '''Valladolid''' et kumapat ya klase baley ed luyag na [[Negros Occidental]]
 * Poblacion
 * Sagua Banua
 * Tabao Proper
+
+== Saray reperensiya ==
+{{Reflist}}
 	
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
