--- a/Bais.mw
+++ b/Bais.mw
@@ -1,6 +1,11 @@
-[[File:Ph_locator_negros_oriental_bais.png|right|270px]] 							
+{{Infobox location}}					
 									
 Say '''Bais''' et kumatlo ya klase siyudad ed luyag na [[Negros Oriental]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 74,722 totoo. <br> 	
-Walay kabaleg tan sukat to ya 319.64 sq. km. Sikato et walad  kumadwa ya distrito. Say zip code to et 6206. 			
+Walay kabaleg tan sukat to ya 319.64 sq. km. Sikato et walad  kumadwa ya distrito. Say zip code to et 6206. 	
+
+== Saray reperensiya ==
+{{Reflist}}	
+
+{{Negros Oriental}}	
 									
 [[Category:Saray siyudad na Filipinas]]
