--- a/Bayawan.mw
+++ b/Bayawan.mw
@@ -1,6 +1,11 @@
-[[File:Ph_locator_negros_oriental_bayawan.png|right|270px]] 							
+{{Infobox location}}					
 									
 Say '''Bayawan''' et kumadwa ya klase siyudad ed luyag na [[Negros Oriental]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 114,074 totoo. <br> 	
-Walay kabaleg tan sukat to ya 699.08 sq. km. Sikato et walad  kumadwa ya distrito. Say zip code to et 6221. 			
+Walay kabaleg tan sukat to ya 699.08 sq. km. Sikato et walad  kumadwa ya distrito. Say zip code to et 6221.
+
+== Saray reperensiya ==
+{{Reflist}} 	
+
+{{Negros Oriental}}		
 									
 [[Category:Saray siyudad na Filipinas]]
