--- a/Canlaon.mw
+++ b/Canlaon.mw
@@ -1,6 +1,11 @@
-[[File:Ph_locator_negros_oriental_canlaon.png|right|270px]] 							
+{{Infobox location}}						
 									
 Say '''Canlaon''' et kumapat ya klase siyudad ed luyag na [[Negros Oriental]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 50,627 totoo. <br> 	
-Walay kabaleg tan sukat to ya 170.93 sq. km. Sikato et walad  unaan ya distrito. Say zip code to et 6223. 			
+Walay kabaleg tan sukat to ya 170.93 sq. km. Sikato et walad  unaan ya distrito. Say zip code to et 6223. 	
+
+== Saray reperensiya ==
+{{Reflist}}	
+
+{{Negros Oriental}}	
 									
 [[Category:Saray siyudad na Filipinas]]
