--- a/Dumaguete.mw
+++ b/Dumaguete.mw
@@ -1,6 +1,11 @@
-[[File:Ph_locator_negros_oriental_dumaguete.png|right|270px]] 							
+{{Infobox location}}					
 									
 Say '''Dumaguete''' et kumatlo ya klase siyudad ed luyag na [[Negros Oriental]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 120,883 totoo. <br> 	
-Walay kabaleg tan sukat to ya 33.62 sq. km. Sikato et walad  kumadwa ya distrito. Say zip code to et 6200. 			
+Walay kabaleg tan sukat to ya 33.62 sq. km. Sikato et walad  kumadwa ya distrito. Say zip code to et 6200. 	
+
+== Saray reperensiya ==
+{{Reflist}}	
+
+{{Negros Oriental}}	
 									
 [[Category:Saray siyudad na Filipinas]]
