--- a/Guihulngan.mw
+++ b/Guihulngan.mw
@@ -1,6 +1,11 @@
-[[File:Ph_locator_negros_oriental_guihulngan.png|right|270px]] 							
+{{Infobox location}}					
 									
 Say '''Guihulngan''' et kumanem ya klase siyudad ed luyag na [[Negros Oriental]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 93,675 totoo. <br> 	
-Walay kabaleg tan sukat to ya 388.56 sq. km. Sikato et walad  unaan ya distrito. Say zip code to et 6214. 			
+Walay kabaleg tan sukat to ya 388.56 sq. km. Sikato et walad  unaan ya distrito. Say zip code to et 6214. 
+
+== Saray reperensiya ==
+{{Reflist}}	
+
+{{Negros Oriental}}		
 									
 [[Category:Saray siyudad na Filipinas]]
