--- a/Tanjay.mw
+++ b/Tanjay.mw
@@ -1,6 +1,11 @@
-[[File:Ph_locator_negros_oriental_tanjay.png|right|270px]] 							
+{{Infobox location}}					
 									
 Say '''Tanjay''' et kumapat ya klase siyudad ed luyag na [[Negros Oriental]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 79,098 totoo. <br> 	
-Walay kabaleg tan sukat to ya 267.05 sq. km. Sikato et walad  kumadwa ya distrito. Say zip code to et 6204. 			
+Walay kabaleg tan sukat to ya 267.05 sq. km. Sikato et walad  kumadwa ya distrito. Say zip code to et 6204. 	
+
+== Saray reperensiya ==
+{{Reflist}}	
+
+{{Negros Oriental}}	
 									
 [[Category:Saray siyudad na Filipinas]]
