--- a/Amlan.mw
+++ b/Amlan.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator negros oriental amlan.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Amlan, Negros Oriental
 | 1990 = 16145		
@@ -23,12 +24,14 @@ Say '''Amlan''' et kumapat ya klase baley ed luyag na [[Negros Oriental]], [[Pil
 * Tambojangin
 * Tandayag	
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
 {{Negros Oriental}}
- 
-											
+ 										
 [[Category:Saray baley na Negros Oriental]]
