--- a/Ayungon.mw
+++ b/Ayungon.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator negros oriental ayungon.png|right|270px]]	
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Ayungon, Negros Oriental
 | 1990 = 33201		
@@ -38,6 +39,9 @@ Say '''Ayungon''' et kumadwa ya klase baley ed luyag na [[Negros Oriental]], [[P
 * Tampocon II
 * Tibyawan
 * Tiguib
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
