--- a/Bacong.mw
+++ b/Bacong.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator negros oriental bacong.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Bacong, Negros Oriental
 | 1990 = 16294		
@@ -36,6 +37,9 @@ Say '''Bacong''' et kumapat ya klase baley ed luyag na [[Negros Oriental]], [[Pi
 * Timbao
 * Tubod
 * West Poblacion
+
+== Saray reperensiya ==
+{{Reflist}}
 	
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
