--- a/Basay.mw
+++ b/Basay.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator negros oriental basay.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Basay, Negros Oriental
 | 1990 = 17736		
@@ -24,6 +25,9 @@ Say '''Basay''' et kumapat ya klase baley ed luyag na [[Negros Oriental]], [[Pil
 * Nagbo-alao
 * Olandao
 * Poblacion
+
+== Saray reperensiya ==
+{{Reflist}}
 	
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
