--- a/Bindoy.mw
+++ b/Bindoy.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator negros oriental bindoy.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Bindoy, Negros Oriental
 | 1990 = 29347		
@@ -38,6 +39,9 @@ Say '''Bindoy''' et kumatlo ya klase baley ed luyag na [[Negros Oriental]], [[Pi
 * Tagaytay
 * Tinaogan
 * Tubod
+
+== Saray reperensiya ==
+{{Reflist}}
 	
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
