--- a/Dauin.mw
+++ b/Dauin.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator negros oriental dauin.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Dauin, Negros Oriental
 | 1990 = 17610		
@@ -37,6 +38,9 @@ Say '''Dauin''' et kumapat ya klase baley ed luyag na [[Negros Oriental]], [[Pil
 * Poblacion III
 * Tugawe
 * Tunga-tunga
+
+== Saray reperensiya ==
+{{Reflist}}
 	
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
