--- a/Jimalalud.mw
+++ b/Jimalalud.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator negros oriental jimalalud.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Jimalalud, Negros Oriental
 | 1990 = 22089		
@@ -42,6 +43,9 @@ Say '''Jimalalud''' et kumapat ya klase baley ed luyag na [[Negros Oriental]], [
 * Sampiniton
 * Talamban
 * Tamao
+
+== Saray reperensiya ==
+{{Reflist}}
 	
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
