--- a/La_Libertad,_Negros_Oriental.mw
+++ b/La_Libertad,_Negros_Oriental.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator negros oriental la libertad.png|right|270px]]	
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> La Libertad, Negros Oriental
 | 1990 = 29979		
@@ -43,6 +44,9 @@ Say '''La Libertad''' et kumatlo ya klase baley ed luyag na [[Negros Oriental]],
 * Tala-on
 * Talayong 
 * Elecia
+
+== Saray reperensiya ==
+{{Reflist}}
 	
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
