--- a/Mabinay.mw
+++ b/Mabinay.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator negros oriental mabinay.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Mabinay, Negros Oriental
 | 1990 = 58935		
@@ -46,6 +47,9 @@ Say '''Mabinay''' et unaan ya klase baley ed luyag na [[Negros Oriental]], [[Pil
 * Samac
 * Tadlong
 * Tarâ
+
+== Saray reperensiya ==
+{{Reflist}}
 	
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
