--- a/Manjuyod.mw
+++ b/Manjuyod.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator negros oriental manjuyod.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Manjuyod, Negros Oriental
 | 1990 = 31989		
@@ -41,6 +42,9 @@ Say '''Manjuyod''' et kumadwa ya klase baley ed luyag na [[Negros Oriental]], [[
 * Tanglad
 * Tubod
 * Tupas
+
+== Saray reperensiya ==
+{{Reflist}}
 	
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
