--- a/Pamplona,_Negros_Oriental.mw
+++ b/Pamplona,_Negros_Oriental.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator negros oriental pamplona.png|right|270px]]	
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Pamplona, Negros Oriental
 | 1990 = 27971		
@@ -30,6 +31,9 @@ Say '''Pamplona''' et kumatlo ya klase baley ed luyag na [[Negros Oriental]], [[
 * Simborio
 * Yupisan
 * Calicanan
+
+== Saray reperensiya ==
+{{Reflist}}
 	
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
