--- a/San_Jose,_Negros_Oriental.mw
+++ b/San_Jose,_Negros_Oriental.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator negros oriental san jose.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> San Jose, Negros Oriental
 | 1990 = 12821		
@@ -28,6 +29,9 @@ Say '''San Jose''' et kumalima ya klase baley ed luyag na [[Negros Oriental]], [
 * Siapo
 * Tampi
 * Tapon Norte
+
+== Saray reperensiya ==
+{{Reflist}}
 	
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
