--- a/Santa_Catalina,_Negros_Oriental.mw
+++ b/Santa_Catalina,_Negros_Oriental.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator negros oriental santa catalina.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Santa Catalina, Negros Oriental
 | 1990 = 53560		
@@ -36,6 +37,9 @@ Say '''Santa Catalina''' et unaan ya klase baley ed luyag na [[Negros Oriental]]
 * San Pedro
 * Santo Rosario
 * Talalak
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
