--- a/Siaton.mw
+++ b/Siaton.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator negros oriental siaton.png|right|270px]]	
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Siaton, Negros Oriental
 | 1990 = 48982		
@@ -40,6 +41,9 @@ Say '''Siaton''' et unaan ya klase baley ed luyag na [[Negros Oriental]], [[Pili
 * Si-it
 * Sumaliring
 * Tayak
+
+== Saray reperensiya ==
+{{Reflist}}
 	
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
