--- a/Sibulan.mw
+++ b/Sibulan.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator negros oriental sibulan.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Sibulan, Negros Oriental
 | 1990 = 27172		
@@ -29,6 +30,9 @@ Say '''Sibulan''' et kumadwa ya klase baley ed luyag na [[Negros Oriental]], [[P
 * San Antonio
 * Tubigon
 * Tubtubon
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
