--- a/Tayasan.mw
+++ b/Tayasan.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator negros oriental tayasan.png|right|270px]]	
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Tayasan, Negros Oriental
 | 1990 = 25749		
@@ -42,6 +43,9 @@ Say '''Tayasan''' et kumatlo ya klase baley ed luyag na [[Negros Oriental]], [[P
 * Tamao
 * Tambulan
 * Tanlad
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
