--- a/Valencia,_Negros_Oriental.mw
+++ b/Valencia,_Negros_Oriental.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator negros oriental valencia.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Valencia, Negros Oriental
 | 1990 = 18102		
@@ -38,6 +39,9 @@ Say '''Valencia''' et unaan ya klase baley ed luyag na [[Negros Oriental]], [[Pi
 * Puhagan
 * Pulangbato
 * Sagbang
+
+== Saray reperensiya ==
+{{Reflist}}
 	
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
