--- a/Template:Negros_Oriental.mw
+++ b/Template:Negros_Oriental.mw
@@ -23,7 +23,7 @@
 * [[Tayasan, Negros Oriental|Tayasan]]
 * [[Valencia, Negros Oriental|Valencia]]
 * [[Vallehermoso, Negros Oriental|Vallehermoso]]
-* [[Zamboanguita, Negros Oriental||Zamboanguita]]
+* [[Zamboanguita, Negros Oriental|Zamboanguita]]
 |group2 = Saray siyudad
 |list2 = 
 * [[Bais]]
