--- a/Allen.mw
+++ b/Allen.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator northern samar allen.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Allen, Northern Samar
 | 1990 = 15404		
@@ -35,7 +36,9 @@ Say '''Allen''' et kumalima ya klase baley ed luyag na [[Northern Samar]], [[Pil
 *Kinabranan Zone II (Pob.)
 *Sabang Zone II (Pob.)
 *Victoria
-	
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
