--- a/Gamay.mw
+++ b/Gamay.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator northern samar gamay.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Gamay, Northern Samar
 | 1990 = 15764		
@@ -40,6 +41,9 @@ Say '''Gamay''' et kumapat ya klase baley ed luyag na [[Northern Samar]], [[Pili
 *Libertad (Pob.)
 *Occidental II (Pob.)
 *Oriental II (Pob.)
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
