--- a/Laoang.mw
+++ b/Laoang.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator northern samar laoang.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Laoang, Northern Samar
 | 1990 = 42048		
@@ -70,6 +71,9 @@ Say '''Laoang''' et kumadwa ya klase baley ed luyag na [[Northern Samar]], [[Pil
 *Yabyaban (San Vicente)
 *Yapas
 *Talisay
+
+== Saray reperensiya ==
+{{Reflist}}
 	
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
