--- a/Mondragon.mw
+++ b/Mondragon.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator northern samar mondragon.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Mondragon, Northern Samar
 | 1990 = 21399		
@@ -39,6 +40,9 @@ Say '''Mondragon''' et kumatlo ya klase baley ed luyag na [[Northern Samar]], [[
 *San Juan
 *Santa Catalina
 *Talolora
+
+== Saray reperensiya ==
+{{Reflist}}
 	
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
