--- a/Pambujan.mw
+++ b/Pambujan.mw
@@ -1,4 +1,5 @@
-[[Image:Ph_locator_northern samar_pambujan.png|right|Mapa na Samar ed Baybay ya nanengneng so location na Pambujan]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Pambujan, Northern Samar
 | 1990 = 18389		
@@ -47,6 +48,8 @@ Say Pambujan walay 26 ya barangay.
 *Tula
 </td></tr></table>
 
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
