--- a/San_Roque.mw
+++ b/San_Roque.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator northern samar san roque.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> San Roque, Northern Samar
 | 1990 = 13856		
@@ -30,7 +31,9 @@ Say '''San Roque''' et kumapat ya klase baley ed luyag na [[Northern Samar]], [[
 *Zone 4 (Pob.) 
 *Zone 5 (Pob.)
 *Zone 6 (Pob.)
-	
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
