--- a/Silvino_Lobos.mw
+++ b/Silvino_Lobos.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator northern samar silvino lobos.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Silvino Lobos, Northern Samar
 | 1990 = 9071		
@@ -40,7 +41,9 @@ Say '''Silvino Lobos''' et kumapat ya klase baley ed luyag na [[Northern Samar]]
 *Poblacion I
 *Poblacion II
 *San Antonio
-	
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
